<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRVItem"
    android:layout_width="350dp"
    android:layout_height="380dp"
    android:layout_marginTop="20dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintRV2Item"
        android:layout_width="320dp"
        android:layout_height="128dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/rounded_corners_rv_item"
        android:elevation="8dp"
        android:shadowColor="@color/RVshadow"
        android:translationZ="-4.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/image"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/typeText"
            style="@style/RVItemTypeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="1dp"
            android:text="@string/launch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameText"
            style="@style/RVItemNameStyle"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/googlesans_medium"
            android:text="Starlink 2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/typeText"
            app:layout_constraintTop_toBottomOf="@+id/typeText" />

        <TextView
            android:id="@+id/shortSiteText"
            style="@style/RVItemShortDetailsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/googlesans_regular"
            android:text="CCAES SLC 40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/shortLaunchDateText"
            style="@style/RVItemShortDetailsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/googlesans_regular"
            android:text="16-12-2014"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shortSiteText"
            app:layout_constraintTop_toBottomOf="@+id/shortSiteText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/RVItemTypeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:text="@string/launch_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRV2Item" />

    <TextView
        android:id="@+id/launchDate"
        style="@style/RVItemDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="Thu Oct 17 5:30:00 2019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/RVItemTypeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="@string/launch_site"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchDate" />

    <TextView
        android:id="@+id/launchSite"
        style="@style/RVItemDetailsStyle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:text="Cape Canaveral Air Force Station Space Launch Complex 40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        style="@style/RVItemTypeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="@string/count_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launchSite" />

    <TextView
        android:id="@+id/countDown"
        style="@style/RVItemDetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:text="5 Hrs 30mins more..."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>